--- a/main.html
+++ b/main.html
@@ -8,6 +8,11 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	    <div id="browser-info">
+        <!-- The browser information will be displayed here -->
+    </div>
+
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
